[package]
name = "unleash-types"
version = "0.15.10"
edition = "2021"
authors = [
    "Christopher Kolstad <chriswk@getunleash.io>",
    "Simon Hornby <liquidwicked64@gmail.com>",
]
license = "MIT"
description = "API types for Unleash (https://github.com/Unleash/unleash) client features API response"
repository = "https://github.com/Unleash/unleash-types-rs"
homepage = "https://github.com/Unleash/unleash-types-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
openapi = ["utoipa"]
hashes = ["xxhash-rust", "base64"]
[dependencies]
base64 = { version = "0.22.1", optional = true }
chrono = { version = "0.4.39", features = ["serde"] }
derive_builder = "0.20.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
utoipa = { version = "5", optional = true, features = ["chrono"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"], optional = true }
[dev-dependencies]
serde_qs = "0.13.0"
test-case = "3.3.1"
