[package]
name = "unleash-types"
version = "0.15.17"
edition = "2021"
authors = [
    "Christopher Kolstad <chriswk@getunleash.io>",
    "Simon Hornby <liquidwicked64@gmail.com>",
]
license = "MIT"
description = "API types for Unleash (https://github.com/Unleash/unleash) client features API response"
repository = "https://github.com/Unleash/unleash-types-rs"
homepage = "https://github.com/Unleash/unleash-types-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["wall-clock"]
wall-clock = ["chrono/clock", "chrono/wasmbind"]
openapi = ["utoipa"]
hashes = ["xxhash-rust", "base64"]
[dependencies]
base64 = { version = "0.22.1", optional = true }
chrono = { version = "0.4.40", default-features = false, features = ["serde", "std"] }
derive_builder = "0.20.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
utoipa = { version = "5", optional = true, features = ["chrono"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"], optional = true }
[dev-dependencies]
serde_qs = "0.14.0"
test-case = "3.3.1"
